Fix alignment for REC label in different resolutions

--- a/styles/style.css
+++ b/styles/style.css
@@ -24,8 +24,8 @@
   position: absolute;
   top: var(--decoration-border-offset);
   right: var(--decoration-border-offset);
-  width: 25px;
-  height: 25px;
+  width: var(--decoration-border-lenght);
+  height: var(--decoration-border-lenght);
   border-top: 1px solid var(--accent-color);
   border-right: 1px solid var(--accent-color);
   z-index: 5;
@@ -36,8 +36,8 @@
   position: absolute;
   bottom: var(--decoration-border-offset);
   left: var(--decoration-border-offset);
-  width: 25px;
-  height: 25px;
+  width: var(--decoration-border-lenght);
+  height: var(--decoration-border-lenght);
   border-bottom: 1px solid var(--accent-color);
   border-left: 1px solid var(--accent-color);
   z-index: 5;
@@ -89,11 +89,8 @@
 }
 
 @media (min-width: 768px) {
-  .decorated-zone::before {
+  .decorated-zone {
     --decoration-border-offset: 20px;
-  }
-
-    .decorated-zone::after {
-    --decoration-border-offset: 20px;
+    --corner-dark-label-h-offset: 49px;
   }
 }
